welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: identifier expected but integer literal found.
recule(nbPas:nbPas+1) 
                   ^Variables:9: error: ')' expected but '}' found.
	}
        ^